# cnb-dataset

./: README.md  config.py  pyproject.toml  scenarios.yaml  scenarios_all.yaml
cnb_dataset/: create_scenarios.py  scenario_word_count.py
